discussion/kv_engine/173142/173142_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove num-item-based checkpoint creation

Since Neo we have an implicit upper bound on the max number of
checkpoints (per bucket) that is logically given by (CMQuota /
CheckpointMaxSize).

Still, there are code paths that interfere with that and possibly break
that invariant. One of those is chk_max_items, which triggers checkpoint
creation when the user-defined max num of items has been queued into a
single checkpoint. Here we remove that trigger.

Change-Id: I2c49065a3d1b05493df8ce9865982d6393f9373f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-26 11:59:09.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 12:22:29.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16998/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5: error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
    checkgt(firstCkptNumItems, 5ull, "");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:104:5: note: expanded from macro "checkgt"
    checkgtfn(expected, actual, msg, __FILE__, __LINE__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:83:13: note: candidate template ignored: deduced conflicting types for parameter "T" ("unsigned long" vs. "unsigned long long")
static void checkgtfn(T exp, T got, const char *msg, const char *file,
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16998/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16998/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45651/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [72/159]: test shutdown snapshot range...(85 ms) SKIPPED


99% tests passed, 2 tests failed out of 427

Total Test time (real) = 680.26 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45651/ )

Timeout of a CTest test 426/427 Test #290: ep_testsuite_dcp.value_eviction.comp_passive ............................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45651/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6752/ : FAILURE

Compile error at [2022-04-26T12:07:29.052Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18786/ : FAILURE

Compile error at [2022-04-26T12:03:04.668Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19829/ : FAILURE

Compile error at [2022-04-26T12:02:36.470Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19829/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19130/ : FAILURE

Compile error at [2022-04-26T12:02:18.878Z] ../kv_engine/engines/ep/tests/ep_testsuite_common.h:104:56:
error: no matching function for call to ?checkgtfn(uint64_t&, long long unsigned int, const char [1], const char [50], int)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6659/ : FAILURE

Compile error at [2022-04-26T12:04:24.507Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6659/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27203/ : FAILURE

Compile error at [2022-04-26T12:04:48.669Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2111:5:
error: no matching function for call to "checkgtfn"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17918/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [20/93]: test producer stream request (partial)...../kv_engine/engines/ep/tests/ep_test_apis.cc:1803 Test failed: `write_items_upto_mem_perc: Unexpected response from store(): no memory" (false)
[2022-04-26T12:16:04.346Z] (107 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17918/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38346/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15966/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
